tests/cases/typecheck/enums/discriminants/duplicate_discriminants.hash
// run=fail, stage=typecheck

#[repr("u8")]
Direction := enum(
    #[discriminant(0)]
    Up,
    #[discriminant(0)]
    Right,
    Down,
    Left,
)
